[package]
name = "nixup"
version = "0.0.0"
authors = [ "Acizza <jgit@tuta.io>" ]
edition = "2018"

[dependencies]
anyhow = "~1.0.0"
colored = "~1.9.0"
dirs-next = "~1.0.0"
gumdrop = "~0.8.0"
libc = "~0.2.0"
rmp-serde = "~0.14.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.4.0"

[dependencies.diesel]
version = "~1.4.0"
default-features = false
features = [ "sqlite" ]

[profile.release]
lto = true
codegen-units = 1

[features]
no_colors = [ "colored/no-color" ]