[package]
name = "nixup"
version = "0.0.0"
authors = [ "Acizza <jgit@tuta.io>" ]
edition = "2018"

[dependencies]
anyhow = "~1.0.0"
bincode = "~1.3.0"
colored = "~1.9.0"
dirs-next = "~1.0.0"
libc = "~0.2.0"
pico-args = "~0.3.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.4.0"

[dependencies.diesel]
version = "~1.4.0"
default-features = false
features = [ "sqlite" ]

[profile.release]
lto = true
codegen-units = 1

[features]
no_colors = [ "colored/no-color" ]