[package]
name = "nixup"
version = "0.0.0"
authors = [ "Acizza <jgit@tuta.io>" ]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
colored = "2.0"
dirs-next = "2.0"
libc = "0.2"
pico-args = "0.3"
serde = "1.0"
serde_derive = "1.0"
smallvec = "1.4"

[dependencies.diesel]
version = "1.4"
default-features = false
features = [ "sqlite" ]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[features]
no_colors = [ "colored/no-color" ]

[profile.release.package.syn]
opt-level = 0
codegen-units = 256

[profile.release.package.quote]
opt-level = 0
codegen-units = 256

[profile.release.package.proc-macro2]
opt-level = 0
codegen-units = 256

[profile.release.package.serde_derive]
opt-level = 0
codegen-units = 256

[profile.release.package.diesel_derives]
opt-level = 0
codegen-units = 256